@@ -4,7 +4,7 @@ CSCRIPT=$(WINDIR)/system32/cscript.exe
 CSCFLAGS=/nologo /debug+ /debug:full 
 INSTALL = /usr/bin/install
 
-MONO_TOOLS = monostyle.exe GenerateDelegate.exe EnumCheck.exe IFaceDisco.exe ./SqlSharp/sqlsharp.exe secutil.exe cert2spc.exe
+MONO_TOOLS = monostyle.exe GenerateDelegate.exe EnumCheck.exe IFaceDisco.exe ./SqlSharp/sqlsharp.exe ./security/secutil.exe
 
 DIRS = 
 
@@ -61,15 +61,13 @@ EnumCheck.exe: EnumCheck.cs EnumCheckAssemblyCollection.cs
 IFaceDisco.exe: IFaceDisco.cs XMLUtil.cs
 	$(CSC) $(CSCFLAGS) /out:IFaceDisco.exe IFaceDisco.cs XMLUtil.cs
 
-secutil.exe: secutil.cs
-	$(CSC) $(CSCFLAGS) secutil.cs
-
-cert2spc.exe: cert2spc.cs ASN1.cs
-	$(CSC) $(CSCFLAGS) /out:cert2spc.exe cert2spc.cs ASN1.cs
+./security/secutil.exe: dummy
+	(cd security; make CSC=$(CSC))
 
 clean:
 	(cd corcompare; make clean)
 	(cd SqlSharp; make clean)
+	(cd security; make clean)
 	rm -f *.exe *.pdb *.dbg *.dll
 	rm -f cormissing.xml
 	rm -f ../../mono/doc/pending-classes.in
